minor fixes. added experimental dark mode

--- a/services/shellfish/style/button.css
+++ b/services/shellfish/style/button.css
@@ -1,5 +1,5 @@
 a, input[type=submit], input[type=button] {
-    border-radius: 0.1rem;
+    border-radius: 0.25rem;
     border: solid 1px var(--color-border);
     padding: 0.2rem;
     margin: 0.1rem;
